--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Martp</string>
+    <string name="app_name" translatable="false">Martp</string>
+    <string name="gallery">Gallery</string>
+    <string name="create_new_art">Create new art</string>
+    <string name="error_executing_operation_in_the_local_database">Error executing operation in the local database</string>
 </resources>
