--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="save_art">Save art</string>
     <string name="unknown_error_failure">An unknown error occurred. Please try again.</string>
     <string name="location_permission_not_granted_failure_error">To proceed with this action, you need to grant access to your location.</string>
+    <string name="this_is_your_new_art">This is your new art!</string>
+    <string name="we_are_generating_your_art">We are generating your art…</string>
+    <string name="no_internet_connection_failure_message">It seems like you don\'t have internet connection to complete this action. Check your phone connection and try again.</string>
 </resources>
