--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,5 @@
     <string name="this_is_your_new_art">Voici votre nouvelle œuvre d\'art !</string>
     <string name="we_are_generating_your_art">Nous générons votre œuvre d\'art…</string>
     <string name="no_internet_connection_failure_message">Il semble que vous n\'avez pas de connexion Internet pour terminer cette action. Vérifiez la connexion de votre téléphone et réessayez.</string>
+    <string name="share_art_message">J\'ai créé cette œuvre interactive avec ma localisation en utilisant Martp. Découvrez le projet en téléchargeant l\'application et créez vos propres œuvres aussi !!</string>
 </resources>
