--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -18,4 +18,5 @@
     <string name="this_is_your_new_art">Essa é a sua nova arte!</string>
     <string name="we_are_generating_your_art">Estamos gerando a sua arte…</string>
     <string name="no_internet_connection_failure_message">Parece que você está sem conexão com a internet para concluir esta ação. Verifique a conexão do seu telefone e tente novamente.</string>
+    <string name="share_art_message">Criei essa arte interativa com a minha localização utilizando o Martp. Conheça o projeto baixando o aplicativo e crie artes para você também!!</string>
 </resources>
