--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="this_is_your_new_art">This is your new art!</string>
     <string name="we_are_generating_your_art">We are generating your art…</string>
     <string name="no_internet_connection_failure_message">It seems like you don\'t have internet connection to complete this action. Check your phone connection and try again.</string>
+    <string name="share_art_message">I created this interactive art with my location using Martp. Discover the project by downloading the app and create your own art too!!</string>
 </resources>
