feat: create MartpProjectInfo scene.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,4 +25,6 @@
     <string name="art_description_hint_beautiful_place">Un lugar muy hermoso, quería dejarlo registrado</string>
     <string name="art_description_hint_crazy_streets">Las calles aquí eran una locura, el arte quedó muy bueno</string>
     <string name="art_description_hint_special_place">Un lugar muy especial para mí durante el viaje</string>
+    <string name="martp_info_description">Martp es un generador de arte interactivo que utiliza la geolocalización como interfaz de interacción para el usuario. Es un proyecto de código abierto y educativo desarrollado en la Universidad Federal de Bahía por el estudiante Manoel Ribeiro. \nPara conocer más sobre el proyecto, puedes contactarme en LinkedIn, visitar mi GitHub o consultar el repositorio del proyecto.</string>
+    <string name="review_on_play_store">Calificar en Play Store</string>
 </resources>
